# semicolyn

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  Cargo.toml  Dockerfile.dev  LICENSE.IOS  Package.resolved  Package.swift  README.md  TODO.md  deny.toml  docker-compose.yml  project.yml
"$TMPDIR/: scan.py"
App/: AppStores.swift  BellHaloView.swift  Bridges.swift  ConnectView.swift  ConnectionViewModel.swift  CoreIdentityMinter.swift  CrashBanner.swift  CursorDragController.swift  CursorHaloView.swift  DebugLog.swift  DebugLogPanel.swift  DefaultsEditorView.swift  DefaultsEditorViewModel.swift  DegradedBanner.swift  DiagnosticsSettingsView.swift  ExperimentalSettingsView.swift  GlymrApp.swift  HardwareKeyboardMonitor.swift  HostEditorSections.swift  HostEditorView.swift  HostKeyPrompt.swift  (+42 more)
crates/glymr-ssh-core/: Cargo.toml
crates/glymr-ssh-core/src/: algorithms.rs  connection.rs  keys.rs  lib.rs
crates/glymr-ssh-core/tests/: auth_integration.rs  cert_auth_integration.rs  connect_integration.rs  forward_integration.rs  shell_integration.rs  tmux_integration.rs
crates/glymr-ssh-core/tests/fixtures/: ecdsa_p521_test_key.pub  ed25519_test_key.pub
crates/semicolyn-ssh-core/: Cargo.toml
crates/semicolyn-ssh-core/src/: algorithms.rs  connection.rs  forward.rs  keys.rs  lib.rs
crates/semicolyn-ssh-core/tests/: auth_integration.rs  cert_auth_integration.rs  connect_integration.rs  forward_integration.rs  mosh_bootstrap_integration.rs  proxyjump_integration.rs  shell_integration.rs  tmux_integration.rs
crates/semicolyn-ssh-core/tests/fixtures/: ed25519_test_key
(+718 files in other folders)
