[package]
name = "semicolyn-ssh-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "semicolyn_ssh_core"
crate-type = ["staticlib", "lib"]

[dependencies]
uniffi = { version = "0.31", features = ["cli", "tokio"] }
russh = "0.61"
ssh-key = { version = "=0.7.0-rc.10", default-features = false, features = ["alloc", "ed25519", "ecdsa", "rsa", "p256", "p384", "encryption", "rand_core"] }
rand_core = "0.10"
getrandom = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"
